# poe-helper

./: .gitignore  CLAUDE.md  README.md  TRANSFER_PROMPT.md  cleanup-changes.txt  package.json  pnpm-lock.yaml  run.bat  turbo.json
.claude/: settings.local.json
apps/overlay/: index.html  package.json  tsconfig.json  vite.config.ts
apps/overlay/src/: App.tsx  index.css
apps/overlay/src-tauri/: Cargo.toml  tauri.conf.json
apps/overlay/src-tauri/.cargo/: config.toml
apps/overlay/src-tauri/capabilities/: default.json
apps/overlay/src-tauri/src/: ai.rs  clipboard.rs  lib.rs  log_watcher.rs  main.rs  oauth.rs  settings.rs
apps/overlay/src/components/: AiPriceInsight.tsx  AskAi.tsx  AtlasHelper.tsx  FlipTracker.tsx  GggAccount.tsx  LevelingGuide.tsx  MapCountStats.tsx  MapLeaderboard.tsx  MapModWarnings.tsx  MapSplitDisplay.tsx  MapTimer.tsx  MarketTab.tsx  PriceCheck.tsx  RunHistory.tsx  RunTimeChart.tsx  Settings.tsx  SpeedrunStats.tsx  TradeAssistant.tsx  WitchSays.tsx  ZoneTracker.tsx
apps/overlay/src/hooks/: useAiAnalysis.ts  useClientLog.ts  useClipboard.ts  useFlipTracker.ts  useLevelingTracker.ts  useMapSpeedrun.ts  usePriceCheck.ts  useTradeWhispers.ts
apps/overlay/src/stores/: ai-store.ts  build-store.ts  overlay-store.ts  settings-store.ts  speedrun-db.ts  speedrun-store.ts
apps/overlay/src/utils/: parseAiJson.ts  store.ts
apps/web/: index.html  package.json
apps/web/src/: App.tsx  index.css
apps/web/src/pages/: Characters.tsx  Dashboard.tsx
