[package]
name = "poe-helper-overlay"
version = "0.1.0"
edition = "2021"

[lib]
name = "poe_helper_overlay_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "poe-helper-overlay"
path = "src/main.rs"

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-clipboard-manager = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
notify = "7"
arboard = "3"
tokio = { version = "1", features = ["full"] }

[build-dependencies]
tauri-build = { version = "2", features = [] }

[profile.release]
strip = true
lto = true
codegen-units = 1
panic = "abort"
