[package]
name = "exiled-orb-overlay"
version = "0.1.0"
edition = "2021"

[lib]
name = "exiled_orb_overlay_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "exiled-orb-overlay"
path = "src/main.rs"

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-shell = "2"
tauri-plugin-sql = { version = "2", features = ["sqlite"] }
tauri-plugin-store = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }

[build-dependencies]
tauri-build = { version = "2", features = [] }

[profile.release]
strip = true
lto = true
codegen-units = 1
panic = "abort"
